--- a/app/views/pages/_testimonies.html.erb
+++ b/app/views/pages/_testimonies.html.erb
@@ -1,7 +1,7 @@
   <div class="testimonies-container">
     <div class="testimony-box">
       <h2>
-        <span>Pourquoi Pickalgo ?</span>
+        Pourquoi Pickalgo ?
       </h2>
 
       <div class="testimonies">
