--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -33,7 +33,7 @@
                 <div class="card-faq-answer">
                   <p>Pickalgo c'est l'association étrange de deux mots:
                   <br><p><u><b>Pick</b></u>: choisir ainsi que cueillir en anglais<br><p><u><b>Algo</b></u>: pour algorithme mais également "quelque chose" en portugais.</p>
-                  <p><u><b>Campagne</b></u> : période pendant laquelle vous pouvez proposer votre prix promo pour un produit (dure 7 sept jours à compter de la publication du produit).</p>
+                  <p><u><b>Campagne</b></u> : période pendant laquelle vous nous indiquez le prix maximal vous êtes prêt à payer pour un produit qui vous intéresse (dure 7 sept jours à compter de la publication du produit).</p>
                 </div>
               </div>
             </div>
@@ -64,11 +64,11 @@
                 <div class="card-faq-answer">
                     <ul><b>Pour vous testeurs :</b>
                       <li>Découvrir de supers produits et services</li>
-                      <li>Vous faire bénéficier des meilleures promos avant tout le monde</li>
+                      <li>Vous faire bénéficier des meilleures remises spécialement négociées pour vous</li>
                     </ul>
                     <ul><b>Pour vous vendeurs :</b>
                       <li>Vous aider à optimiser le prix de vos promos</li>
-                      <li>Augmenter vos volumes de ventes pour diminuer ses coûts de production et de distribution</li>
+                      <li>Augmenter vos volumes de ventes pour diminuer vos coûts de production et de distribution</li>
                       <li>Gagner en notoriété</li>
                     </ul>
                 </div>
@@ -84,7 +84,7 @@
                   <br><span>C'est pas si sorcier, n'est-ce pas Jamy ?</span>
                 </h3>
                 <div class="card-faq-answer">
-                    <p>Un produit ou service vous plait ? Aidez son vendeur à comprendre quel prix pratiquer pour réussir son opération de promo. Pour cela, c'est simple, dites-nous quel prix maximal vous seriez prêt à payer pour faire l'acquisition du produit dès à présent. Chaque proposition émise par nos testeurs est étudiée pour mesurer son impact sur l'objectif que s'est fixé le vendeur (acquisition de nouveaux clients, fidélisation, déstockage). Nous faisons ensuite bénéficier nos testeurs de la promo optimale qui permet de compenser la meilleure réduction du prix par une augmentation des ventes.</p>
+                    <p>Un produit ou service vous plait ? Aidez son vendeur à comprendre quel prix pratiquer pour réussir son opération de promo. Pour cela, c'est simple, choisissez parmi les propositions de promos le prix maximal que vous êtes prêt à payer pour faire l'acquisition du produit.</p>
                 </div>
               </div>
             </div>
@@ -145,20 +145,6 @@
               </div>
             </div>
           </div>
-          <div id="question-7" class="card-faqs">
-            <div class="card-faq-container">
-              <div class="box-with-circle-icon"><i class="fas fa-check"></i><br></div>
-              <div class="card-faq">
-                <h3 class="card-faq-question">
-                  Pourquoi confirmer ma participation ?
-                  <br><span>Parce que le plus important c'est de participer</span>
-                </h3>
-                <div class="card-faq-answer">
-                    <p>Le calcul de la meilleure promo dont nous pouvons vous faire bénéficier est basé sur le nombre de personnes acquérant le produit sur la campagne. En confirmant votre participation le vendeur connait exactement ses volumes de production, ses coûts, ce qui nous permet de calculer le prix optimal dont il est possible de vous faire bénéficier. Si la confirmation n'était pas obligatoire, les volumes pourraient varier en fonction des ajouts / désistements sur la campagne, et la meilleure promo calculée serait donc faussée.<b> Vous n'avez rien à payer pour confirmer votre participation</b>, vous vous engagez simplement à ne pas vous désister si nous pouvons vous faire bénéficier d'un prix plus bas que celui que vous avez choisi.</p>
-                </div>
-              </div>
-            </div>
-          </div>
           <div id="question-8" class="card-faqs">
             <div class="card-faq-container">
               <div class="box-with-circle-icon"><i class="fas fa-credit-card"></i><br></div>
@@ -173,21 +159,7 @@
               </div>
             </div>
           </div>
-          <div id="question-9" class="card-faqs">
-            <div class="card-faq-container">
-              <div class="box-with-circle-icon"><i class="glyphicon glyphicon-pencil"></i><br></div>
-              <div class="card-faq">
-                <h3 class="card-faq-question">
-                  Puis-je modifier / supprimer ma proposition de prix ?
-                  <br><span>Win the yes needs the no to win against the no</span>
-                </h3>
-                <div class="card-faq-answer">
-                    <p><b>Yes</b> si la campagne est encore en cours</p>
-                    <p><b>No</b> si la campagne est clôturée</p>
-                </div>
-              </div>
-            </div>
-          </div>
+
 
 
         </div>
