--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,8 +20,8 @@
     </header>
     <div class="banner-container">
       <div class="banner-content">
-        <h1>La meilleure promo possible</h1>
-        <p class="concept">Aidez les produits qui vous plaisent à adopter le meilleur prix promotionnel. Profitez en retour de la meilleure promo dont il est possible de vous faire bénéficier.
+        <h1>Devenez testeur de promo !</h1>
+        <p class="concept">Aidez les produits qui vous plaisent à adopter le meilleur prix promotionnel. Profitez en retour de la meilleure promo négociée pour vous.
         </p>
         <div class="cta-links">
           <a href="#how-it-works">
@@ -35,61 +35,54 @@
     </div>
   </div>
   <div class="how-it-works" id="how-it-works">
-    <h3>Un produit vous plaît ?
-    </h3>
+    <h2>Un produit vous plaît ?
+    </h2>
     <div class="steps">
       <div class="icon-and-text-no-shaddow" id="first">
-        <%= image_tag "determine.svg", class: "action-image", alt: "icon image think svg" %>
+        <%= image_tag "choose.svg", class: "action-image", alt: "icon image choose svg" %>
         <div class="quote">Déterminez...</div>
         <div class="step-text">
-          le prix maximal vous seriez prêt à payer pour en faire l'acquisition dès à présent
+          le prix maximal vous seriez prêt à payer pour ce produit
         </div>
       </div>
       <div class="icon-and-text-no-shaddow" id="second">
-        <%= image_tag "choose.svg", class: "action-image", alt: "icon image act svg" %>
+        <%= image_tag "pay.svg", class: "action-image", alt: "icon image act svg" %>
         <div class="quote">Validez...</div>
         <div class="step-text">
-          une proposition d'achat du montant maximal que vous avez déterminé
+          une proposition d'achat du montant que vous avez déterminé
         </div>
       </div>
       <div class="icon-and-text-no-shaddow" id="third">
         <%= image_tag "successful_purchase.svg", class: "action-image", alt: "icon image successful purchase svg" %>
         <div class="quote">Profitez...</div>
         <div class="step-text">
-          du meilleur prix promotionnel dont il est possible de vous faire bénéficier
+          du meilleur prix promotionnel spécialement négocié pour vous
         </div>
       </div>
     </div>
   </div>
   <div id="conclusion">
     <div class="how-it-works">
-      <h3>Comment ça marche ?</h3>
-      <div class="steps">
+      <h2>Comment ça marche ?</h2>
+      <div class="conclusion-cases">
         <div class="icon-and-text-no-shaddow" id="fourth">
-          <%= image_tag "optimize.svg", class: "action-image", alt: "icon image analyse optimosation svg" %>
-          <div class="quote-orange">Nous calculons...</div>
-          <div class="step-text">
-            la promo qui permet de compenser la meilleure réduction du prix par une augmentation des ventes
-          </div>
-        </div>
-        <div class="icon-and-text-no-shaddow" id="fifth">
           <%= image_tag "select.svg", class: "action-image", alt: "icon image select successful order svg" %>
           <div class="quote-orange">C'est gagné :</div>
           <div class="step-text">
             <ul style="padding-left: 0">
               <li>Vous proposiez une promo à 180 €</li>
-              <li>La promo est fixée à 140 €</li>
+              <li>La promo négociée est à 140 €</li>
               <li>Vous obtenez le produit pour 140 €</li>
             </ul>
           </div>
         </div>
-        <div class="icon-and-text-no-shaddow" id="sixth">
+        <div class="icon-and-text-no-shaddow" id="fifth">
           <%= image_tag "reject.svg", class: "action-image", alt: "icon image reject svg" %>
           <div class="quote-orange">Rien de perdu :</div>
           <div class="step-text">
             <ul style="padding-left: 0">
               <li>Vous proposiez une promo à 135 €</li>
-              <li>La promo est fixée à 140 €</li>
+              <li>La promo négociée à 140 €</li>
               <li>Vous ne profitez pas de la promo</li>
             </ul>
           </div>
