more clarity home and partners

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -70,7 +70,7 @@
           <div class="quote-orange">C'est gagné :</div>
           <div class="step-text">
             <ul style="padding-left: 0">
-              <li>Vous proposiez une promo à 180 €</li>
+              <li>Vous proposez une promo à 180 €</li>
               <li>La promo négociée est à 140 €</li>
               <li>Vous obtenez le produit pour 140 €</li>
             </ul>
@@ -81,7 +81,7 @@
           <div class="quote-orange">Rien de perdu :</div>
           <div class="step-text">
             <ul style="padding-left: 0">
-              <li>Vous proposiez une promo à 135 €</li>
+              <li>Vous proposez une promo à 135 €</li>
               <li>La promo négociée à 140 €</li>
               <li>Vous ne profitez pas de la promo</li>
             </ul>
