--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -34,7 +34,7 @@
     </div>
   </div>
   <div class="how-it-works" id="how-it-works">
-    <h2>Comment ça marche ?
+    <h2>Déroulement
     </h2>
     <div class="steps">
       <div class="icon-and-text-no-shaddow" id="first">
@@ -46,29 +46,29 @@
       </div>
       <div class="icon-and-text-no-shaddow" id="third">
         <%= image_tag "determine.svg", class: "action-image", alt: "icon image think svg" %>
-        <div class="quote">Décidez</div>
+        <div class="quote">Octroi</div>
         <div class="step-text">
-          Décidez du prix préférentiel que vous êtes prêt à accorder aux participants en fonction de leur nombre
+          Octroyez, sous condition, un prix préférentiel aux participants de la campagne
         </div>
       </div>
       <div class="icon-and-text-no-shaddow" id="second">
         <%= image_tag "choose.svg", class: "action-image", alt: "icon image choose svg" %>
         <div class="quote">Enquête</div>
         <div class="step-text">
-          Tout acheteur intéressé émet une proposition d'achat du montant maximal qu'il est prêt à payer pour votre produit
+          Nous récoltons pendant 7 jours les propositions des testeurs intéressés par votre produit
         </div>
       </div>
     </div>
   </div>
   <div id="conclusion">
     <div class="how-it-works">
-      <h2>Fin de la campagne</h2>
+      <h2>Finalité</h2>
       <div class="steps">
         <div class="icon-and-text-no-shaddow" id="sixth">
           <%= image_tag "select.svg", class: "action-image", alt: "icon image select successful order svg" %>
           <div class="quote-orange">Validez...</div>
           <div class="step-text">
-            les commandes des acheteurs qui proposaient un prix supérieur où égal à votre prix préférentiel
+            les commandes des acheteurs qui proposent un prix supérieur où égal à votre prix préférentiel
           </div>
         </div>
         <div class="icon-and-text-no-shaddow" id="sixth">
