--- a/app/views/pages/_testimonies.html.erb
+++ b/app/views/pages/_testimonies.html.erb
@@ -9,7 +9,7 @@
           <%= cl_image_tag("jorge.jpg", :width=>150, :height=>150, :dpr=>2.0, :radius=>"max", :crop=>"fill", class: "user-photo", alt: "picture photo Jorge Pickalgo founder") %>
           <h4 class="testimony-title">Jorge, fondateur de Pickalgo</h4>
           <div class="testimony-text">
-            "Aider les vendeurs à trouver le meilleur prix pour leurs promos et en faire bénéficier ceux qui y auront contribué"
+            "Aider les vendeurs à optimiser le prix de leurs promos et permettre aux testeurs d'être récompensés pour leur implication"
           </div>
         </div>
         <div class="testimony">
