--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -48,7 +48,7 @@
         <%= image_tag "determine.svg", class: "action-image", alt: "icon image think svg" %>
         <div class="quote">Octroi</div>
         <div class="step-text">
-          Octroyez, sous condition, un prix préférentiel aux participants de la campagne
+          Octroyez, sous condition, un prix préférentiel aux participants à la campagne
         </div>
       </div>
       <div class="icon-and-text-no-shaddow" id="second">
