--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -82,7 +82,7 @@
           <div class="step-text">
             <ul style="padding-left: 0">
               <li>Vous proposez une promo à 135 €</li>
-              <li>La promo négociée à 140 €</li>
+              <li>La promo négociée est à 140 €</li>
               <li>Vous ne profitez pas de la promo</li>
             </ul>
           </div>
