--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -48,7 +48,7 @@
         <%= image_tag "determine.svg", class: "action-image", alt: "icon image think svg" %>
         <div class="quote">Octroi</div>
         <div class="step-text">
-          Octroyez, sous condition, un prix préférentiel aux participants à la campagne
+          Octroyez, sous conditions, un prix préférentiel aux testeurs ayant participé à la campagne
         </div>
       </div>
       <div class="icon-and-text-no-shaddow" id="second">
@@ -75,14 +75,14 @@
           <%= image_tag "reject.svg", class: "action-image", alt: "icon image reject svg" %>
           <div class="quote-orange">Déclinez...</div>
           <div class="step-text">
-            automatiquement les propositions des acheteurs qui sont inférieures au prix que vous avez déterminé
+            automatiquement les propositions des acheteurs qui sont inférieures à votre prix préférentiel
           </div>
         </div>
         <div class="icon-and-text-no-shaddow" id="fifth">
           <%= image_tag "optimize.svg", class: "action-image", alt: "icon image analyse optimosation svg" %>
           <div class="quote-orange">Détermiez...</div>
           <div class="step-text">
-            grâce aux analyses des données de la campagne, le meilleur prix que votre promo doit adopter
+            facilement grâce aux analyses des données de la campagne, le meilleur prix que votre promo doit adopter
           </div>
         </div>
       </div>
