--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -22,7 +22,7 @@
     <div class="banner-container">
       <div class="banner-content">
         <h1>Objectif <span id="typer">.</span></h1>
-        <p class="concept">Sur Pickalgo impliquez vos clients dans la conception de vos promos. Vous découvrirez ainsi le prix qui permettra à votre promo d'atteindre son objectif de la façon la plus efficiente.
+        <p class="concept">Testez votre promo en impliquant vos clients dans sa conception. Vous découvrirez le prix et les volumes qui permettront à votre promo d'atteindre son objectif de la façon la plus efficiente.
         </p>
         <div class="cta-links">
           <a href="#how-it-works">
@@ -33,58 +33,74 @@
       </div>
     </div>
   </div>
+
+  <div class="img-layer-container">
+    <%= image_tag "layers.png", class:"layers" %>
+  </div>
+  <h2 class="steps-title">Atteindre votre objectif en 4 étapes</h2>
   <div class="how-it-works" id="how-it-works">
-    <h2>Déroulement
-    </h2>
-    <div class="steps">
-      <div class="icon-and-text-no-shaddow" id="first">
-        <%= image_tag "launch.svg", class: "action-image", alt: "icon image launch campaign svg" %>
-        <div class="quote">Campagne</div>
+    <div class="step-pro reverse" id="first">
+      <div class="text">
+        <h3>Campagne</h3>
+        <div class="sub-title">Votre campagne, votre style</div>
         <div class="step-text">
-          Lancez une campagne en présentant le produit pour lequel vous souhaitez proposer une promo
+          Choisissez le style de campagne que vous voulez lancer:
+        </div>
+        <div class="test-type">
+          <h5 class="test-title">A/B Test</h5>
+          <p>Vous avez déjà une idée précise, mais hésitez encore entre plusieurs prix pour votre promo.</p>
+          <%= link_to root_path do %>
+            <div class="btn more-infos">En savoir plus</div>
+          <% end %>
+        </div>
+        <div class="test-type">
+          <h5 class="test-title">Test ouvert</h5>
+          <p>Les testeurs intéressés nous communiquent le prix maximal qu'ils sont prêts à payer pour votre produit.</p>
+          <%= link_to root_path do %>
+            <div class="btn more-infos">En savoir plus</div>
+          <% end %>
         </div>
       </div>
-      <div class="icon-and-text-no-shaddow" id="third">
-        <%= image_tag "determine.svg", class: "action-image", alt: "icon image think svg" %>
-        <div class="quote">Octroi</div>
-        <div class="step-text">
-          Octroyez, sous conditions, un prix préférentiel aux testeurs ayant participé à la campagne
-        </div>
+      <div class="step-pro-image-container">
+        <%= image_tag "choice.svg", class:"step-pro-image"  %>
       </div>
-      <div class="icon-and-text-no-shaddow" id="second">
-        <%= image_tag "choose.svg", class: "action-image", alt: "icon image choose svg" %>
-        <div class="quote">Enquête</div>
+    </div>
+    <div class="step-pro" id="second">
+      <div class="step-pro-image-container">
+        <%= image_tag "select.svg", class:"step-pro-image"  %>
+      </div>
+      <div class="text">
+        <h3>Collecte</h3>
+        <div class="sub-title">Votre collecte, votre style</div>
         <div class="step-text">
-          Nous récoltons pendant 7 jours les propositions des testeurs intéressés par votre produit
+          Choisissez qui peut participer à votre campagne :
+        </div>
+        <div class="test-type">
+          <h5 class="test-title">Privé</h5>
+          <p>Seuls les clients que vous aurez vous même invité pourront participer</p>
+          <%= link_to root_path do %>
+            <div class="btn more-infos">En savoir plus</div>
+          <% end %>
+        </div>
+        <div class="test-type">
+          <h5 class="test-title">Public</h5>
+          <p>Tous les utilisateurs de Pickalgo peuvent participer</p>
+          <%= link_to root_path do %>
+            <div class="btn more-infos">En savoir plus</div>
+          <% end %>
         </div>
       </div>
     </div>
-  </div>
-  <div id="conclusion">
-    <div class="how-it-works">
-      <h2>Finalité</h2>
-      <div class="steps">
-        <div class="icon-and-text-no-shaddow" id="sixth">
-          <%= image_tag "select.svg", class: "action-image", alt: "icon image select successful order svg" %>
-          <div class="quote-orange">Validez...</div>
-          <div class="step-text">
-            les commandes des acheteurs qui proposent un prix supérieur où égal à votre prix préférentiel
-          </div>
+    <div class="step-pro reverse" id="third">
+      <div class="text">
+        <h3>Analyse</h3>
+        <div class="sub-title">Vos données, notre analyse</div>
+        <div class="step-text">
+          Au bout de 7 jours la campagne est clôturée. Les données récoltées nous permettent de mesurer l'impact qu'a chaque prix sur les volumes et le chiffre d'affaires. Déterminez facilement quel prix vous permettra de générer les volumes nécessaires à l'atteinte de votre objectif.
         </div>
-        <div class="icon-and-text-no-shaddow" id="sixth">
-          <%= image_tag "reject.svg", class: "action-image", alt: "icon image reject svg" %>
-          <div class="quote-orange">Déclinez...</div>
-          <div class="step-text">
-            automatiquement les propositions des acheteurs qui sont inférieures à votre prix préférentiel
-          </div>
-        </div>
-        <div class="icon-and-text-no-shaddow" id="fifth">
-          <%= image_tag "optimize.svg", class: "action-image", alt: "icon image analyse optimosation svg" %>
-          <div class="quote-orange">Détermiez...</div>
-          <div class="step-text">
-            facilement grâce aux analyses des données de la campagne, le meilleur prix que votre promo doit adopter
-          </div>
-        </div>
+      </div>
+      <div class="step-pro-image-container">
+        <%= image_tag "optimize.svg", class:"step-pro-image"  %>
       </div>
     </div>
   </div>
