save reponsive page

--- a/app/assets/stylesheets/components/_shared-keyframes.scss
+++ b/app/assets/stylesheets/components/_shared-keyframes.scss
@@ -23,3 +23,44 @@
 }
 
 
+
+@-webkit-keyframes pulse {
+  0% {
+    opacity: .5
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: .5;
+  }
+}
+
+@-webkit-keyframes pulse-shadow {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(251,136,56, 0.4);
+  }
+  70% {
+      -webkit-box-shadow: 0 0 0 10px rgba(251,136,56, 0);
+  }
+  100% {
+      -webkit-box-shadow: 0 0 0 0 rgba(251,136,56, 0);
+  }
+}
+@keyframes pulse-shadow {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(251,136,56, 0.4);
+    box-shadow: 0 0 0 0 rgba(251,136,56, 0.4);
+  }
+  70% {
+      -moz-box-shadow: 0 0 0 10px rgba(251,136,56, 0);
+      box-shadow: 0 0 0 10px rgba(251,136,56, 0);
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 rgba(251,136,56, 0);
+      box-shadow: 0 0 0 0 rgba(251,136,56, 0);
+  }
+}
+
+
+
