--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -103,6 +103,26 @@
         <%= image_tag "optimize.svg", class:"step-pro-image"  %>
       </div>
     </div>
+    <div class="step-pro" id="fourth">
+      <div class="step-pro-image-container">
+        <%= image_tag "lift-off.svg", class:"step-pro-image"  %>
+      </div>
+      <div class="text">
+        <h3>Action</h3>
+        <div class="sub-title">Atteignez votre objectif</div>
+        <div class="step-text">
+          <div class="box-case">
+            <p>Premier pas vers votre objectif: validez les commandes des acheteurs qui proposent un prix supérieur ou égal au prix déterminé grâce à l'analyse.</p>
+          </div>
+          <div class="box-case">
+            <p>Déclinez les propositions des acheteurs qui sont inférieures à celui-ci</p>
+          </div>
+          <div class="box-case">
+            <p>Lancez votre promo à plus grande échelle: vous avez l'assurance de proposer le prix optimal</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <%= render 'testimonies' %>
   <%= render 'shared/footer' %>
