--- a/app/assets/stylesheets/pages/_partners.scss
+++ b/app/assets/stylesheets/pages/_partners.scss
@@ -1,18 +1,7 @@
-.img-layer-container {
-  display: flex;
-  justify-content: center;
-  padding: 20px 0;
+#target {
+  padding-top: 80px;
 }
 
-.layers {
-  height: 40px;
-  animation: pulse 4s infinite;
-}
-
-.steps-title {
-  margin: 0;
-  width: 100%;
-}
 .step-pro {
   display: flex;
   align-items: center;
@@ -38,6 +27,11 @@
   }
 
   h3 {
+
+    .fas {
+      margin-right: 10px;
+    }
+
     font-size: 40px;
     color: $blue;
     margin: 0 0 20px 0;
@@ -152,6 +146,10 @@
 
 @media all and (max-width: 980px) {
 
+  .steps-title {
+    margin-bottom: 50px;
+  }
+
   .reverse {
     flex-direction: column-reverse;
   }
@@ -167,7 +165,7 @@
 
   .step-pro h3 {
     text-align: center;
-    margin: 0 0 30px 0;
+    margin: 0 0 50px 0;
   }
 
   .step-pro-image-container {
@@ -192,11 +190,6 @@
 
     #concept {
         display: none;
-    }
-
-    .steps-title {
-      margin: 0 auto;
-      width: 90%;
     }
 
     .step-pro-image {
